<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/distance_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/distance_hint"
        android:autofillHints=""
        android:inputType="phone|number" />

    <EditText
        android:id="@+id/average_speed_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/average_speed_hint"
        android:autofillHints=""
        android:inputType="phone|number" />

    <EditText
        android:id="@+id/driving_time_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/driving_time_hint"
        android:autofillHints=""
        android:inputType="phone|number" />

    <EditText
        android:id="@+id/start_time_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:inputType="time"
        android:hint="@string/start_time_hint" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch" />

</LinearLayout>